--- a/.github/workflows/on_push.yml
+++ b/.github/workflows/on_push.yml
@@ -80,6 +80,11 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
 
+      - name: Setup Pkl
+        uses: pkl-community/setup-pkl@v0.0.1
+
+      - run: go install github.com/apple/pkl-go/cmd/pkl-gen-go@latest
+
       - name: Check vendor
         run: make vendor-check
 
