--- a/.github/workflows/on_release.yml
+++ b/.github/workflows/on_release.yml
@@ -19,6 +19,8 @@ jobs:
 
       - name: Set up Go
         uses: actions/setup-go@v5
+        with:
+          go-version: 1.22
 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
