--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -82,6 +82,7 @@ kos:
       - latest
       - '{{.Version}}'
     base_import_paths: true
+    base_image: bendonnelly/pkl:0.25.1
   - id: redfish
     main: ./cmd/redfish
     env:
@@ -103,6 +104,7 @@ kos:
       - latest
       - '{{.Version}}'
     base_import_paths: true
+    base_image: bendonnelly/pkl:0.25.1
 
 checksum:
   name_template: SHA256SUMS
